tests/files/flow_controller_tests/should_fail/081.cmdr
x = false;
print arccos(x);